# strengthstats

./: .flake8  README.md  pyproject.toml
.github/data/: project-dictionary.txt
.github/workflows/: check.yaml
strengthstats/: __init__.py
strengthstats/analysis/: constants.py  preprocessor.py  visualizer.py
strengthstats/webapp/: app.py
strengthstats/webapp/templates/: index.html  report.html
tests/analysis/: test_preprocessor.py  test_visualizer.py
tests/analysis/resources/: sample_export.csv
tests/webapp/: test_app.py
