[tool.poetry]
name = "strengthstats"
version = "0.1.0"
description = ""
authors = ["Simon <gevhaz@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
flask = "^3.0.3"


[tool.poetry.group.dev-dependencies.dependencies]
pytest = "^8.3.2"
pandas-stubs = "^2.2.2.240807"
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
